--- a/client/index.html
+++ b/client/index.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="#e74c3c">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <link rel="manifest" href="manifest.json">
     <title>Pizzeria - Ordina Online</title>
     <style>
         * {
@@ -497,6 +501,7 @@
     </div>
 
     <script src="/socket.io/socket.io.js"></script>
+    <script src="sw-register.js"></script>
     <script>
         const socket = io(window.location.origin);
         let menu = [];
